<resources>
    <string name="app_name">My FICMI App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Messages</string>
    <string name="giving">Giving</string>
    <string name="title_devotion">Daily Devotions</string>
    <string name="announce">News/Announcements</string>
    <string name="branch">Our Locations</string>
    <string name="about">About Us</string>
    <string name="branches"><b>Church Headquarters:</b>4, Freedom Street, Off Ogunlana Street, Ijesha, Lagos
    \n\n<b>Branches</b>
        \nEjigbo branch: 1, Emily Eniola By Queenman\'s School, Omiyale Street, Ejigbo, Lagos.\n
    \nIkorodu branch: 10 Adewumi Street, By Oando Filling Station, Odogunyan, Ikorodu, Lagos.\n
    \nNdoni branch: Behind Ex-Gov Sir Peter Odili\'s house, Ndoni Town, Rivers State.\n
    \nBenin branch: Okundayo Street After Cavaliers Pure Water By Total Bus Stop Ekae 2 Sapele Road Benin City, Edo State\n
    \nAbuja branch: Plot 375A HamzaAbdulahi Asomugha Bank Road, By 2/2 Junction Kuwait FCT Abuja</string>
    <string name="welcome"><b>Welcome to Freedom In Christ Mission App</b>\n
    \nWe exist to set the captives free and help them grow towards God through his Word and through his relationship with others</string>
    <string name="notes">Notes</string>
    <string name="create_new_notes">Create Note</string>
    <string name="settings">Settings</string>
    <string name="hint">Write your note here</string>
    <string name="addnotes">Add a note</string>
    <string name="offer">Offering</string>
    <string name="tithe">Tithes</string>
    <string name="project">Church Projects</string>
    <string name="bible_offer">"It is more blessed to give than to receive" <b>(Acts 20:35)</b></string>
    <string name="vision"><b>VISION STATEMENT</b></string>
    <string name="vision1">Setting the captives free</string>
    <string name="mission"><b>MISSION STATEMENT</b></string>
    <string name="mission1">Raising globally a generation of committed believers, full of power and marching on to win the lost for Christ</string>
    <string name="values"><b>CORE VALUES</b></string>
    <string name="values1">A people of power\n
    Rooted in the word\n
    Committed to God\n
    Exceeding expectations</string>
    <string name="sure"><b>OUR SURE WORD</b></string>
    <string name="sure1">He that has called me is completely dependable; if He says it, He will do it.\n (1 Thessalonians 5:24 -MSG-<b><i>paraphrased</i></b>)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardnum">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="date">MM YYYY</string>
    <string name="set_captive">Setting the captives free</string>
    <string name="f_i_c_m_i">F.I.C.M.I</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_phone_number_here">Enter your phone number here</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="already_have_an_account_login_here">Already have an account?Login here</string>
    <string name="branchs">Branch</string>
    <string name="which_church_department">Which church department do you serve?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="watchword">"He that has called us is completely reliable.\n If he says it, he will do it"</string>
    <string name="message"><u>Message</u></string>
    <string name="nav_open_drawer">Open Navigation Drawer</string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>
    <string name="freedom_in_christ_mission">Freedom In Christ Mission</string>
    <string name="support">Support</string>
    <string name="rate">Rate App</string>
    <string name="credits">Credits</string>
    <string-array name="locate">
        <item>Select Branch</item>
        <item>Headquarters</item>
        <item>Ikorodu</item>
        <item>Ejigbo</item>
        <item>Benin</item>
        <item>Abuja</item>
        <item>Ndoni</item>
    </string-array>
</resources>