<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AboutActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_about"
        android:theme="?attr/actionBarTheme"
        android:background="@color/bottombar"
        app:titleTextColor="@color/white"
        app:title="Who We Are"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:textSize="14sp"
        android:text="@string/vision" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginStart="90dp"
        android:textSize="14sp"
        android:text="@string/vision1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="100dp"
        android:textSize="14sp"
        android:text="@string/mission" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:textSize="14sp"
        android:text="@string/mission1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="100dp"
        android:textSize="14sp"
        android:text="@string/values" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="1dp"
        android:layout_marginStart="80dp"
        android:textSize="14sp"
        android:text="@string/values1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="100dp"
        android:textSize="14sp"
        android:text="@string/sure" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="3dp"
        android:layout_marginStart="50dp"
        android:textSize="14sp"
        android:text="@string/sure1" />

</LinearLayout>